--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32711,7 +32711,12 @@ select {
 
 body {
   --tw-text-opacity: 1;
+  font-family: "Open Sans", sans-serif;
   color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+
+h1, h2, h3 {
+  font-family: "Open Sans", sans-serif;
 }
 
 h1 {
@@ -32727,6 +32732,89 @@ h2 {
 h3 {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.container-sm {
+  margin: auto;
+  width: 70%;
+  max-width: 1000px;
+}
+
+.header {
+  height: 90px;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(36,36,112,1) 29%, rgb(0, 204, 255) 92%);
+}
+
+/*diseño Banner*/
+
+.banner {
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(36,36,112,1) 29%, rgb(0, 204, 255) 92%);
+  color: #fff;
+  padding: 2rem 0rem;
+  height: auto;
+  max-height: 700px;
+  width: 100%;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.banner h1,
+.banner h2,
+.banner h3 {
+  color: #fff;
+}
+
+.banner__content {
+  display: flex;
+  justify-content: space-between;
+  height: 64%;
+  padding-bottom: 6rem;
+  align-items: center;
+}
+
+.banner__figure {
+  height: 20%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.banner .button {
+  display: block;
+  text-align: center;
+  padding: 0.8rem 2rem;
+  border: 0;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  background: #4d0686;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.2rem;
+  box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  margin-top: 2rem;
+  transition: 300ms;
+}
+
+.banner .button:hover {
+  background: #5c09a0;
+}
+
+.banner .figure {
+  display: none;
+  width: 40%;
+  height: 100%;
+}
+
+@media (min-width: 576px) {
+  .banner .figure {
+    display: block;
+  }
 }
 
 @media (min-width: 640px) {
