--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -81,7 +81,7 @@ h3 {
     height: 20%;
     width: 100%;
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
 }
 
 .banner .button {
@@ -111,7 +111,7 @@ h3 {
     height: 100%;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 750px) {
     .banner .figure {
         display: block;
     }
