--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,21 +10,26 @@ body {
 
 h1, h2, h3 {
     font-family: "Open Sans", sans-serif;
+    margin-bottom: 0.4rem;
 }
 
 h1 {
-    font-size: 1.25rem;
+    font-size: 2.2rem;
     line-height: 1.75rem;
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     line-height: 2rem;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     line-height: 2rem;
+}
+
+p {
+    font-size: 1.1rem;
 }
 
 .container-sm {
