--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,9 +8,10 @@ body {
     color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
     font-family: "Open Sans", sans-serif;
     margin-bottom: 0.4rem;
+    font-weight: bold;
 }
 
 h1 {
