--- a/public/theme/css/style.css
+++ b/public/theme/css/style.css
@@ -19,6 +19,16 @@ body {
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
+.body-wrapper {
+  /*Agregar scroll-spy*/
+  position: relative;
+  height: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background: #ECE9E6;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", sans-serif;
@@ -682,7 +692,7 @@ button:focus,
 
 .scroll-top-to {
   position: fixed;
-  right: 20px;
+  left: 20px;
   bottom: 50px;
   width: 40px;
   height: 40px;
@@ -690,7 +700,7 @@ button:focus,
   text-align: center;
   background: #2e7eed;
   color: #fff;
-  transition: 0.3s;
+  transition: 0.3s ease;
   z-index: 999556;
   cursor: pointer;
   display: none;
